--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "grunt-load-gruntfile": "0.0.2",
     "grunt-sass": "^3.0.2",
     "vue": "^2.6.10",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "acorn": ">=6.4.1",
+    "minimist": ">=1.2.3",
+    "kind-of": ">=6.0.3",
+    "serialize-javascript": ">=2.1.1",
+    "diff": ">=3.5.0"
   },
   "dependencies": {
     "@vue/cli-service": "^3.9.2",
     "node": "^12.6.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.1",
     "sass": "^1.22.5",
     "vue-contenteditable-directive": "^1.2.0",
     "vue-wysiwyg": "^1.7.2"
